working game + cucumber + gui du prof